# BingTerminaTranslator

./: .gitignore  README.md  README_EN.md  README_ZH-HANS.md  README_ZH-HANT.md  bin.py  functional_test.py  packeg_for_windows.ps1  packges  setup.cfg  setup.py  test.py  test_functional_test.py
bin_terminal_translater/: __init__.py  core.py  setting.py
bin_terminal_translater/ini/: parser.ini
bin_terminal_translater/public/: errors.py
bin_terminal_translater/test/: core_test.py  error_test.py
bing_translator/: __init__.py  __main__.py  core.py
conf/: data_table.json
indstall/: windows.ps1
ini/: conf.ini  language_code.ini  parser.ini
install/: linux.sh  windows.ps1
install/windows/: install.ps1
intstall/: linux.sh  packegs_of_linux  windows.ps1
scripts/: zh-Hans.ps1
test/: test.py
