[metadata]
name = bing_translator
# TODO版本号
# version =
author = 87Keys
author_email = meme_me2019@outlook.com


[options]
packages =find:
python_requires = >=3.6
install_requires =
    bing-translation-for-python
    pyperclip
    tqdm

[options.entry_points]
console_scripts =
    bing = bing_translator:entrance
