[metadata]
name = BinTerminaTranslator
author = 87Keys
author_email = meme_me2019@outlook.com
description =The project is designed as a quick translation tool built into the terminal
long_description_content_type=text/markdown
long_description=file:README_EN.md,README_ZH-HANS.md,README_ZH-HANT.md
classifiers=
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages =find:
python_requires = >=3.6
install_requires =
    bing-translation-for-python
    pyperclip

[options.entry_points]
console_scripts =
    bing = bing_translator:entrance
